--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 @import url(./vendor/fonts.css);
 @import url(./blocks/root/root.css);
 @import url(./blocks/content/content.css);
+@import url(./blocks/content/content_moved.css);
 @import url(./blocks/content/content__caption.css);
 @import url(./blocks/content/content__column.css);
 @import url(./blocks/content/content__container.css);
