--- a/blocks/star/star.css
+++ b/blocks/star/star.css
@@ -3,6 +3,7 @@
   background-color: white;
   z-index: -1;
   animation: sparkle infinite alternate;
+  box-shadow: 0 0 10px 2px white;
 }
 
 @keyframes sparkle {
