--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,7 +1,7 @@
 .button {
   color: var(--color-text);
   border: none;
-  padding: 0;
+  padding: 7px;
   border-radius: 5px;
   cursor: pointer;
   background: url(../../images/button.png);
